# pee_chatbot_ALL_distribution

./: LICENSE  OpenCalm7B_LLM.py  README.md
pee_chatbot_LLM_CALM/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  request_test_calm.json
pee_chatbot_LLM_CALM/init/: init_script.sh
pee_chatbot_UI/: .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh
pee_chatbot_UI/components/Chat/: Chat.tsx
pee_chatbot_UI/pages/api/home/: home.tsx
pee_chatbot_UI/types/: openai.ts
pee_chatbot_UI/utils/server/: index.ts
pee_chatbot_server/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
pee_chatbot_server/app/LLM/: OpenCalm7B_LLM.py
pee_chatbot_server/app/models/: OpenCalm7B_chat.py
pee_chatbot_server/app/server/: app.py
