[tool.poetry]
name = "custom_chatbot_server"
version = "0.1.0"
description = ""
authors = ["Masahiro Nishimi <mah@edged-edge.jp>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.21.1"
fastapi = "^0.95.0"
langchain = "^0.0.230"
openai = "^0.27.2"
gunicorn = "^20.1.0"
pydantic = "^1.10.7"
starlette = "^0.26.1"
text-generation = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
